--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
   <!-- Hero Section -->
   <section class="min-h-screen flex flex-col justify-center items-center text-center px-6" style="background: linear-gradient(to bottom, var(--secondary-2), var(--secondary-1));">
-    <img src="logo.png" alt="Wearlyfit Logo" class="w-20 mb-4">
+    <img src="wearlyfit-high-resolution-logo-grayscale-transparent.png" alt="Wearlyfit Logo" class="w-20 mb-4">
     <h1 class="text-4xl font-extrabold text-[var(--brand-primary)]">Wearlyfit</h1>
     <p class="text-lg font-semibold mb-3">Your Fit, Your Story</p>
     <p class="max-w-lg mb-6">The first Algerian fashion marketplace. Buy, sell, and explore clothing with Cash on Delivery.</p>
