--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
   <!-- شريط علوي ثابت مع اللوغو -->
   <header class="w-full bg-[var(--brand-primary)] fixed top-0 left-0 z-50 shadow-md">
     <div class="max-w-6xl mx-auto flex items-center py-3 px-6">
-      <img src="wearlyfit-high-resolution-logo (2).png" alt="Wearlyfit Logo" class="h-14">
+      <img src="wearlyfit-high-resolution-logo (2).png" alt="Wearlyfit Logo" class="h-20">
     </div>
   </header>
 
   <!-- Hero Section -->
-  <section class="min-h-screen flex flex-col justify-center items-center text-center px-6 pt-28" style="background: linear-gradient(to bottom, var(--secondary-2), var(--secondary-1));">
-    <h1 class="text-4xl font-extrabold text-[var(--brand-primary)]">Wearlyfit</h1>
+  <section class="min-h-screen flex flex-col justify-center items-center text-center px-6" style="padding-top: 25px; background: linear-gradient(to bottom, var(--secondary-2), var(--secondary-1));">
+    <h1 class="text-5xl font-extrabold text-[var(--brand-primary)]">Wearlyfit</h1>
     <p class="text-lg font-semibold mb-3">Your Fit, Your Story</p>
     <p class="max-w-lg mb-6">The first Algerian fashion marketplace. Buy, sell, and explore clothing with Cash on Delivery.</p>
     <a href="#download" class="inline-flex items-center gap-2 px-6 py-3 rounded-xl shadow card-shadow font-semibold text-white" style="background: var(--accent-1);">
@@ -113,12 +113,12 @@
   <section class="py-12 px-6 max-w-6xl mx-auto">
     <h2 class="text-3xl font-extrabold text-center mb-10 text-[var(--brand-primary)]">Discover the Marketplace</h2>
     <div class="grid md:grid-cols-4 sm:grid-cols-2 grid-cols-1 gap-4">
-      <img src="anna-evans-Vfy9pP8tkQg-unsplash.jpg" loading="lazy" class="rounded-xl gallery-img card-shadow">
-      <img src="pexels-kristina-chuprina-132621985-18935118.jpg" loading="lazy" class="rounded-xl gallery-img card-shadow">
-      <img src="blaire-harmon-aXa6y7lD5wc-unsplash.jpg" loading="lazy" class="rounded-xl gallery-img card-shadow">
-      <img src="tuananh-blue-3heVBZoJXGU-unsplash.jpg" loading="lazy" class="rounded-xl gallery-img card-shadow">
-      <img src="tory-hoffman-i69uoOV4GbI-unsplash.jpg" loading="lazy" class="rounded-xl gallery-img card-shadow">
-      <img src="pexels-ayobami-adepoju-61080370-32519377.jpg" loading="lazy" class="rounded-xl gallery-img card-shadow">
+      <img src="pexels-ayobami-adepoju-61080370-32519377.jpg" class="rounded-xl gallery-img card-shadow">
+      <img src="tory-hoffman-i69uoOV4GbI-unsplash.jpg" class="rounded-xl gallery-img card-shadow">
+      <img src="tuananh-blue-3heVBZoJXGU-unsplash.jpg" class="rounded-xl gallery-img card-shadow">
+      <img src="blaire-harmon-aXa6y7lD5wc-unsplash.jpg" class="rounded-xl gallery-img card-shadow">
+      <img src="pexels-kristina-chuprina-132621985-18935118.jpg" class="rounded-xl gallery-img card-shadow">
+      <img src="anna-evans-Vfy9pP8tkQg-unsplash.jpg" class="rounded-xl gallery-img card-shadow">
     </div>
     <div class="text-center mt-8">
       <a href="#download" class="px-6 py-3 rounded-xl font-semibold text-white" style="background: var(--accent-1);">Explore More on the App</a>
@@ -162,15 +162,15 @@
 
   <!-- Footer -->
   <footer class="py-6 px-6 text-white text-center" style="background: #2a3f42;">
-    <p class="mb-2">© 2025 Wearlyfit – Your Fit, Your Story</p>
     <div class="flex justify-center gap-3 mb-3">
       <a href="https://www.facebook.com/share/1FCZxqRtiP/" class="w-8 h-8 flex items-center justify-center rounded-md bg-white/10 hover:bg-white/20"><i class="fab fa-facebook-f"></i></a>
       <a href="https://www.instagram.com/wearlyfit.app?igsh=N3R3ZjNmMXM0dHBu" class="w-8 h-8 flex items-center justify-center rounded-md bg-white/10 hover:bg-white/20"><i class="fab fa-instagram"></i></a>
       <a href="https://www.tiktok.com/@wearlyfit.app?_t=ZS-8zfj7BFJJpq&_r=1" class="w-8 h-8 flex items-center justify-center rounded-md bg-white/10 hover:bg-white/20"><i class="fab fa-tiktok"></i></a>
     </div>
-    <p class="text-sm">📧 <a href="mailto:wearlyfit.app@gmail.com" class="underline">wearlyfit.app@gmail.com</a></p>
-    <p class="text-sm">📱 <a href="https://wa.me/213652591860" class="underline">+213 652 59 18 60</a></p>
+    <p class="text-sm flex items-center justify-center gap-2"><i class="fa-regular fa-envelope"></i><a href="mailto:wearlyfit.app@gmail.com" class="underline">wearlyfit.app@gmail.com</a></p>
+    <p class="text-sm flex items-center justify-center gap-2"><i class="fab fa-whatsapp"></i><a href="https://wa.me/213652591860" class="underline">+213 652 59 18 60</a></p>
     <p class="text-xs mt-2"><a href="https://oowfa.github.io/wearlyfit-privacy/wearlyfit.html" class="underline">Privacy Policy</a></p>
+    <p class="mt-2">© 2025 Wearlyfit – Your Fit, Your Story</p>
   </footer>
 
 </body>
