--- a/index.html
+++ b/index.html
@@ -52,15 +52,15 @@
 
 <body>
 
-  <!-- شريط علوي ثابت مع اللوغو -->
+  <!-- شريط علوي أصغر مع لوغو أكبر -->
   <header class="w-full bg-[var(--brand-primary)] fixed top-0 left-0 z-50 shadow-md">
-    <div class="max-w-6xl mx-auto flex items-center py-3 px-6">
-      <img src="wearlyfit-high-resolution-logo (2).png" alt="Wearlyfit Logo" class="h-20">
+    <div class="max-w-6xl mx-auto flex items-center py-2 px-6">
+      <img src="wearlyfit-high-resolution-logo (2).png" alt="Wearlyfit Logo" class="h-28">
     </div>
   </header>
 
   <!-- Hero Section -->
-  <section class="min-h-screen flex flex-col justify-center items-center text-center px-6" style="padding-top: 25px; background: linear-gradient(to bottom, var(--secondary-2), var(--secondary-1));">
+  <section class="min-h-screen flex flex-col justify-center items-center text-center px-6" style="padding-top: 110px; background: linear-gradient(to bottom, var(--secondary-2), var(--secondary-1));">
     <h1 class="text-5xl font-extrabold text-[var(--brand-primary)]">Wearlyfit</h1>
     <p class="text-lg font-semibold mb-3">Your Fit, Your Story</p>
     <p class="max-w-lg mb-6">The first Algerian fashion marketplace. Buy, sell, and explore clothing with Cash on Delivery.</p>
@@ -120,7 +120,7 @@
       <img src="pexels-kristina-chuprina-132621985-18935118.jpg" class="rounded-xl gallery-img card-shadow">
       <img src="anna-evans-Vfy9pP8tkQg-unsplash.jpg" class="rounded-xl gallery-img card-shadow">
     </div>
-    <div class="text-center mt-8">
+    <div class="text-center mt-10">
       <a href="#download" class="px-6 py-3 rounded-xl font-semibold text-white" style="background: var(--accent-1);">Explore More on the App</a>
     </div>
   </section>
@@ -174,4 +174,4 @@
   </footer>
 
 </body>
-</html>
+                                                                                                                                                                             </html>
