--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 
   <!-- شريط علوي أصغر مع لوغو أكبر -->
   <header class="w-full bg-[var(--brand-primary)] fixed top-0 left-0 z-50 shadow-md">
-    <div class="max-w-6xl mx-auto flex items-center py-0 px-6">
+    <div class="max-w-6xl mx-auto flex items-center py-1 px-6">
       <!-- كبرنا اللوغو فقط بدون زيادة ارتفاع الشريط -->
-      <img src="wearlyfit-high-resolution-logo (2).png" alt="Wearlyfit Logo" class="h-24">
+      <img src="IMG_20250912_233659.png" alt="Wearlyfit Logo" class="h-34">
     </div>
   </header>
 
