--- a/index.html
+++ b/index.html
@@ -52,16 +52,15 @@
 
 <body>
 
-  <!-- شريط علوي أصغر مع لوغو أكبر -->
+  <!-- شريط علوي مع لوغو في يسار -->
   <header class="w-full bg-[var(--brand-primary)] fixed top-0 left-0 z-50 shadow-md">
-    <div class="max-w-6xl mx-auto flex items-center py-1 px-6">
-      <!-- كبرنا اللوغو فقط بدون زيادة ارتفاع الشريط -->
-      <img src="IMG_20250912_233659.png" alt="Wearlyfit Logo" class="h-34">
+    <div class="max-w-6xl mx-auto flex items-center justify-start px-4" style="height: 60px;">
+      <img src="IMG_20250912_233659.png" alt="Wearlyfit Logo" class="h-[40px]">
     </div>
   </header>
 
   <!-- Hero Section -->
-  <section class="min-h-screen flex flex-col justify-center items-center text-center px-6" style="padding-top: 110px; background: linear-gradient(to bottom, var(--secondary-2), var(--secondary-1));">
+  <section class="min-h-screen flex flex-col justify-center items-center text-center px-6" style="padding-top: 70px; background: linear-gradient(to bottom, var(--secondary-2), var(--secondary-1));">
     <h1 class="text-5xl font-extrabold text-[var(--brand-primary)]">Wearlyfit</h1>
     <p class="text-lg font-semibold mb-3">Your Fit, Your Story</p>
     <p class="max-w-lg mb-6">The first Algerian fashion marketplace. Buy, sell, and explore clothing with Cash on Delivery.</p>
@@ -114,14 +113,14 @@
   <section class="py-12 px-6 max-w-6xl mx-auto">
     <h2 class="text-3xl font-extrabold text-center mb-10 text-[var(--brand-primary)]">Discover the Marketplace</h2>
     <div class="grid md:grid-cols-4 sm:grid-cols-2 grid-cols-1 gap-4">
-      <img src="pexels-ayobami-adepoju-61080370-32519377.jpg" class="rounded-xl gallery-img card-shadow">
-      <img src="tory-hoffman-i69uoOV4GbI-unsplash.jpg" class="rounded-xl gallery-img card-shadow">
-      <img src="tuananh-blue-3heVBZoJXGU-unsplash.jpg" class="rounded-xl gallery-img card-shadow">
-      <img src="blaire-harmon-aXa6y7lD5wc-unsplash.jpg" class="rounded-xl gallery-img card-shadow">
-      <img src="pexels-kristina-chuprina-132621985-18935118.jpg" class="rounded-xl gallery-img card-shadow">
       <img src="anna-evans-Vfy9pP8tkQg-unsplash.jpg" class="rounded-xl gallery-img card-shadow">
+      <img src="pexels-kristina-chuprina-132621985-18935118.jpg" class="rounded-xl gallery-img card-shadow">
+      <img src="blaire-harmon-aXa6y7lD5wc-unsplash.jpg" class="rounded-xl gallery-img card-shadow">
+      <img src="tuananh-blue-3heVBZoJXGU-unsplash.jpg" class="rounded-xl gallery-img card-shadow">
+      <img src="tory-hoffman-i69uoOV4GbI-unsplash.jpg" class="rounded-xl gallery-img card-shadow">
+      <img src="pexels-ayobami-adepoju-61080370-32519377.jpg" class="rounded-xl gallery-img card-shadow">
     </div>
-    <div class="text-center mt-10">
+    <div class="text-center mt-12">
       <a href="#download" class="px-6 py-3 rounded-xl font-semibold text-white" style="background: var(--accent-1);">Explore More on the App</a>
     </div>
   </section>
@@ -175,4 +174,4 @@
   </footer>
 
 </body>
-        </html>
+                                                                                                                     </html>
